@@ -1,0 +1,2 @@
+Use set -e rather than passing -e on the shebang-line.
+Fixed-Lintian-Tags: maintainer-script-without-set-e
