@@ -1,0 +1,11 @@
+#!/bin/sh
+
+set -e
+
+# Source debconf library.
+. /usr/share/debconf/confmodule
+
+#DEBHELPER#
+
+# Get LDAP-Server
+db_metaget blah/server || true
